hphp/hack/test/typecheck/expression_trees/pipe3.php.exp
File "pipe3.php", line 16, characters 42-43:
Invalid argument (Typing[4110])
  File "pipe3.php", line 9, characters 41-50:
  Expected `ExampleInt`
  File "pipe3.php", line 9, characters 85-97:
  But got `ExampleString`
File "pipe3.php", line 18, characters 10-12:
Invalid return type (Typing[4110])
  File "pipe3.php", line 13, characters 45-56:
  Expected `ExampleFloat`
  File "pipe3.php", line 16, characters 8-47:
  But got `TInfer#1 = ExampleString`
  File "expr_tree.hhi", line 14, characters 33-38:
    via this generic `TInfer`
